--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,5 +26,5 @@ deploy_staging:
     - ssh -i $SSH_KEY -o StrictHostKeyChecking=no $STAGING_USER@$STAGING_SERVER "cd ~/skinwallet && docker image rm -f $CI_REGISTRY_IMAGE:staging || true"
     - ssh -i $SSH_KEY -o StrictHostKeyChecking=no $STAGING_USER@$STAGING_SERVER "cd ~/skinwallet && docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY"
     - ssh -i $SSH_KEY -o StrictHostKeyChecking=no $STAGING_USER@$STAGING_SERVER "cd ~/skinwallet && docker pull $CI_REGISTRY_IMAGE:staging"
-    - ssh -i $SSH_KEY -o StrictHostKeyChecking=no $STAGING_USER@$STAGING_SERVER "cd ~/skinwallet && docker compose up --build -d  frontend"
+    - ssh -i $SSH_KEY -o StrictHostKeyChecking=no $STAGING_USER@$STAGING_SERVER "cd ~/skinwallet && docker compose up --force-recreate -d frontend"
 
