--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@types/dinero.js": "^1.9.0",
     "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-datepicker": "^4.11.2",
