--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.10",
+    "@types/slick-carousel": "^1.6.37",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
