--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
         include /etc/nginx/mime.types;
 
         location / {
-            try_files $uri /index.html;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
