--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^1.7.15",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
-    "d3": "^7.8.5",
+    "d3-selection": "^3.0.0",
     "dinero.js": "^1.9.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
