--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "d3-selection": "^3.0.0",
+    "date-fns": "^2.30.0",
     "dinero.js": "^1.9.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
