--- a/package.json
+++ b/package.json
@@ -9,32 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@types/node": "20.5.7",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "d3-selection": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "dinero.js": "^1.9.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "@headlessui/react": "^1.7.15",
-    "axios": "^1.4.0",
-    "d3-selection": "^3.0.0",
-    "date-fns": "^2.30.0",
-    "dinero.js": "^1.9.1",
     "react-datepicker": "^4.15.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
     "@types/d3": "^7.4.0",
     "@types/dinero.js": "^1.9.0",
     "@types/node": "^20.3.1",
+    "@types/react": "^18.2.21",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.10",
