--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dinero.js": "^1.9.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "formik": "^2.4.5",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -29,7 +30,8 @@
     "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
