--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.15.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1",
@@ -40,6 +41,7 @@
     "@types/react": "^18.2.21",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
+    "@types/react-select-country-list": "^2.2.1",
     "@types/react-slick": "^0.23.10",
     "@types/react-slider": "^1.3.1",
     "@types/slick-carousel": "^1.6.37"
