--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dinero.js": "^1.9.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "fast-deep-equal": "^3.1.3",
     "formik": "^2.4.5",
     "next": "13.4.19",
     "postcss": "8.4.28",
