--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.5",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "qs": "^6.12.0",
     "react": "18.2.0",
     "react-datepicker": "^4.15.0",
     "react-dom": "18.2.0",
@@ -39,6 +40,7 @@
     "@types/d3": "^7.4.0",
     "@types/dinero.js": "^1.9.0",
     "@types/node": "^20.3.1",
+    "@types/qs": "^6.9.14",
     "@types/react": "^18.2.21",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
